# braindrip-backend/src/server/routes/learningPathResources.js
@@ -5,10 +5,26 @@ import learningPathResourceController from "#root/server/controllers/learningPat
 
 const {
     createLearningPathResource,
-    updateLearningPathResource } = learningPathResourceController
+    updateLearningPathResource,
+    getLearningPathResourceById,
+    deleteLearningPathResource
+} = learningPathResourceController
 
 router.post("/", createLearningPathResource)
 
 router.put("/", updateLearningPathResource)
+
+
+router.delete("/", deleteLearningPathResource)
+
+router.get("/id/:learningPathResourceId", getLearningPathResourceById)
+
+
+router.get("/id/:learningPathResourceId", getLearningPathResourceById)
+ 
+router.delete("/", deleteLearningPathResource)
+
+//router.get("/:learningPathId", getLearningPathResources)
+
 
 export default router;
